Refactored data cleaning code and handled missing values more efficiently

--- a/src/Module 4/Advanced Data Quality & Validation/Ques_2.ipynb
+++ b/src/Module 4/Advanced Data Quality & Validation/Ques_2.ipynb
@@ -2,89 +2,157 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "❌ The dataset file was not found at the path: /workspaces/AI_DATA_ANALYSIS_/src/Module 4/data/your_dataset.csv\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "The dataset file was not found at the path: ../data/your_dataset.csv",
+     "ename": "ImportError",
+     "evalue": "cannot import name 'DataContext' from 'great_expectations.data_context' (/home/vscode/.local/lib/python3.10/site-packages/great_expectations/data_context/__init__.py)",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 16\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;66;03m# If the file is not found, raise a FileNotFoundError with the correct path\u001b[39;00m\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m❌ The dataset file was not found at the path: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mos\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mabspath(file_path)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 16\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe dataset file was not found at the path: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m# Step 3: Perform basic data quality checks on the loaded dataset\u001b[39;00m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdf\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mlocals\u001b[39m():  \u001b[38;5;66;03m# Check if the DataFrame exists (i.e., the dataset was loaded successfully)\u001b[39;00m\n\u001b[1;32m     20\u001b[0m     \u001b[38;5;66;03m# Print basic information about the dataset\u001b[39;00m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: The dataset file was not found at the path: ../data/your_dataset.csv"
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[15], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgreat_expectations\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata_context\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m DataContext\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# --------------------------------------------\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Part 2: Automating Data Quality Checks\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# --------------------------------------------\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Step 1: Load and Inspect Data\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# -------------------------------\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'DataContext' from 'great_expectations.data_context' (/home/vscode/.local/lib/python3.10/site-packages/great_expectations/data_context/__init__.py)"
      ]
     }
    ],
    "source": [
-    "import os\n",
+    "from great_expectations.data_context import DataContext\n",
+    "# --------------------------------------------\n",
+    "# Part 2: Automating Data Quality Checks\n",
+    "# --------------------------------------------\n",
+    "\n",
+    "# -------------------------------\n",
+    "# Step 1: Load and Inspect Data\n",
+    "# -------------------------------\n",
     "import pandas as pd\n",
     "\n",
-    "# Step 1: Define the file path\n",
-    "file_path = '../data/your_dataset.csv'  # Adjust this to the correct path relative to your current working directory\n",
+    "# Corrected file path\n",
+    "file_path = '/workspaces/AI_DATA_ANALYSIS_/src/Module 4/Advanced Data Quality & Validation/saample_data.csv'\n",
     "\n",
-    "# Step 2: Check if the file exists at the specified path\n",
-    "if os.path.exists(file_path):\n",
-    "    # If file exists, print the absolute path and load the dataset\n",
-    "    print(f\"✅ File found at: {os.path.abspath(file_path)}\")\n",
-    "    df = pd.read_csv(file_path)  # Load the dataset into a pandas DataFrame\n",
-    "    print(\"✅ Dataset loaded successfully.\")\n",
-    "else:\n",
-    "    # If the file is not found, raise a FileNotFoundError with the correct path\n",
-    "    print(f\"❌ The dataset file was not found at the path: {os.path.abspath(file_path)}\")\n",
-    "    raise FileNotFoundError(f\"The dataset file was not found at the path: {file_path}\")\n",
+    "# Load the dataset\n",
+    "try:\n",
+    "    df = pd.read_csv(file_path)\n",
+    "    print(\"✅ Data loaded successfully.\")\n",
+    "    display(df.head())  # Only display if data is loaded successfully\n",
+    "except FileNotFoundError:\n",
+    "    df = None\n",
+    "    print(f\"❌ File not found at: {file_path}\")\n",
     "\n",
-    "# Step 3: Perform basic data quality checks on the loaded dataset\n",
-    "if 'df' in locals():  # Check if the DataFrame exists (i.e., the dataset was loaded successfully)\n",
-    "    # Print basic information about the dataset\n",
-    "    print(\"\\n✅ Basic Data Overview:\")\n",
-    "    print(df.info())  # Shows the summary of the dataset (columns, data types, non-null count)\n",
-    "    \n",
-    "    # Display the first few rows of the dataset to get a quick look at the data\n",
-    "    print(\"\\n✅ First 5 Rows of the Dataset:\")\n",
-    "    print(df.head())\n",
-    "    \n",
-    "    # Step 4: Check for missing values\n",
-    "    print(\"\\n✅ Missing Values in Each Column:\")\n",
-    "    print(df.isnull().sum())  # Check for missing values in each column\n",
-    "    \n",
-    "    # Step 5: Check for duplicate rows\n",
-    "    print(\"\\n✅ Duplicates in the Dataset:\")\n",
-    "    print(f\"Total Duplicates: {df.duplicated().sum()}\")  # Check if there are any duplicate rows\n",
-    "    df_no_duplicates = df.drop_duplicates()  # Remove duplicates if any\n",
-    "    print(f\"✅ Duplicates Removed. New Shape: {df_no_duplicates.shape}\")\n",
-    "    \n",
-    "    # Step 6: Basic Statistical Summary\n",
-    "    print(\"\\n✅ Statistical Summary of the Dataset:\")\n",
-    "    print(df.describe())  # Show statistics for numerical columns\n",
+    "if df is None:\n",
+    "    raise ValueError(\"❌ Stopping execution: Dataset could not be loaded.\")\n",
+    "\n",
+    "# -------------------------------\n",
+    "# Step 2: Initialize Great Expectations Project\n",
+    "# -------------------------------\n",
+    "import os\n",
+    "import great_expectations as ge\n",
+    "\n",
+    "# Correct import for DataContext\n",
+    "from great_expectations.data_context import DataContext  # Corrected import\n",
+    "\n",
+    "# Initialize the project\n",
+    "project_root = \"ge_project\"\n",
+    "context = None\n",
+    "\n",
+    "if not os.path.exists(project_root):\n",
+    "    # Create the context for the project without scaffolding\n",
+    "    context = DataContext(project_root)\n",
+    "    print(f\"✅ Great Expectations project initialized at: {project_root}\")\n",
     "else:\n",
-    "    print(\"❌ Dataset was not loaded successfully. Exiting the program.\")\n"
+    "    context = DataContext(project_root)\n",
+    "    print(\"✅ Great Expectations project already exists.\")\n",
+    "\n",
+    "# -------------------------------\n",
+    "# Step 3: Create a Data Context and Expectation Suite\n",
+    "# -------------------------------\n",
+    "expectation_suite_name = \"saample_data_suite\"\n",
+    "\n",
+    "# Check if the expectation suite exists or create a new one\n",
+    "if not context.list_expectation_suite_names():\n",
+    "    context.create_expectation_suite(expectation_suite_name)\n",
+    "    print(f\"✅ Created new expectation suite: {expectation_suite_name}\")\n",
+    "else:\n",
+    "    print(f\"ℹ️ Using existing expectation suite: {expectation_suite_name}\")\n",
+    "\n",
+    "# -------------------------------\n",
+    "# Step 4: Create Batch Request\n",
+    "# -------------------------------\n",
+    "from great_expectations.core.batch import RuntimeBatchRequest\n",
+    "\n",
+    "# Define batch request\n",
+    "batch_request = RuntimeBatchRequest(\n",
+    "    datasource_name=\"my_datasource\",\n",
+    "    data_connector_name=\"default_runtime_data_connector_name\",\n",
+    "    data_asset_name=\"saample_data_asset\",\n",
+    "    runtime_parameters={\"batch_data\": df},\n",
+    "    batch_identifiers={\"default_identifier_name\": \"default_id\"},\n",
+    ")\n",
+    "\n",
+    "# -------------------------------\n",
+    "# Step 5: Add Expectations\n",
+    "# -------------------------------\n",
+    "validator = context.get_validator(\n",
+    "    batch_request=batch_request,\n",
+    "    expectation_suite_name=expectation_suite_name,\n",
+    ")\n",
+    "\n",
+    "# Example expectations\n",
+    "validator.expect_column_to_exist(\"id\")\n",
+    "validator.expect_column_values_to_not_be_null(\"id\")\n",
+    "validator.expect_column_values_to_be_unique(\"id\")\n",
+    "validator.expect_column_values_to_be_between(\"age\", min_value=18, max_value=100)\n",
+    "\n",
+    "# Save the expectation suite\n",
+    "validator.save_expectation_suite(discard_failed_expectations=False)\n",
+    "print(\"✅ Expectations added and saved.\")\n",
+    "\n",
+    "# -------------------------------\n",
+    "# Step 6: Validate Data\n",
+    "# -------------------------------\n",
+    "checkpoint_config = {\n",
+    "    \"name\": \"saample_data_checkpoint\",\n",
+    "    \"config_version\": 1.0,\n",
+    "    \"class_name\": \"Checkpoint\",\n",
+    "    \"run_name_template\": \"%Y%m%d-%H%M%S-saample\",\n",
+    "    \"validations\": [\n",
+    "        {\n",
+    "            \"batch_request\": batch_request,\n",
+    "            \"expectation_suite_name\": expectation_suite_name,\n",
+    "        }\n",
+    "    ],\n",
+    "}\n",
+    "\n",
+    "# Add or update checkpoint\n",
+    "context.add_or_update_checkpoint(**checkpoint_config)\n",
+    "\n",
+    "# Run the checkpoint\n",
+    "results = context.run_checkpoint(checkpoint_name=\"saample_data_checkpoint\")\n",
+    "print(\"✅ Validation complete.\")\n",
+    "from great_expectations.data_context import DataContext\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'DataContext' from 'great_expectations.data_context' (/home/vscode/.local/lib/python3.10/site-packages/great_expectations/data_context/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgreat_expectations\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata_context\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m DataContext\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'DataContext' from 'great_expectations.data_context' (/home/vscode/.local/lib/python3.10/site-packages/great_expectations/data_context/__init__.py)"
+     ]
+    }
+   ],
    "source": [
-    "# Part 2: Automating Data Quality Checks\n",
-    "# Objective: Use Python and data quality frameworks to automate validation.\n",
-    "\n",
-    "# Task 1: Setting Up Automated Validation with Python\n",
-    "\n",
-    "# Task 2: Introduction to Great Expectations: Install the great_expectations package and set up a basic project.\n",
-    "\n",
-    "# Task 3: Creating Expectations with Great Expectations: Use Great Expectations to define data validation expectations for a dataset.\n",
-    "\n",
-    "\n"
+    "from great_expectations.data_context import DataContext\n"
    ]
   }
  ],
