Refactored data cleaning code and handled missing values more efficiently

--- a/src/Module 4/Hands-on - Data Cleaning & Quality Automation/Ques_1.ipynb
+++ b/src/Module 4/Hands-on - Data Cleaning & Quality Automation/Ques_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   id     name gender  age   salary  normalized_salary\n",
+      "0   1    Alice      F   26  50000.0                0.0\n",
+      "1   2      Bob      M   30  55000.0                0.5\n",
+      "2   3  Charlie      M   29  60000.0                1.0\n",
+      "3   4    David      M   32  54000.0                0.4\n",
+      "4   5      Eve      F   29  50000.0                0.0\n",
+      "5   5      Eve    NaN   28  55000.0                0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Function to automate data cleaning\n",
+    "def clean_data(df, fill_missing_method='mean', fill_value=None):\n",
+    "    \"\"\"\n",
+    "    Clean the data by:\n",
+    "    1. Filling missing values based on a chosen method.\n",
+    "    2. Removing outliers.\n",
+    "    3. Converting columns to appropriate data types.\n",
+    "    4. Standardizing column names.\n",
+    "\n",
+    "    Parameters:\n",
+    "    df (pd.DataFrame): The DataFrame to be cleaned.\n",
+    "    fill_missing_method (str): Method for filling missing values ('mean', 'median', 'mode', 'value').\n",
+    "    fill_value (any): A custom value for filling missing data (used if fill_missing_method='value').\n",
+    "\n",
+    "    Returns:\n",
+    "    pd.DataFrame: Cleaned DataFrame.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # 1. Standardize column names (convert to lowercase and remove spaces)\n",
+    "    df.columns = df.columns.str.lower().str.replace(' ', '_')\n",
+    "\n",
+    "    # 2. Fill missing values for numeric columns\n",
+    "    valid_methods = ['mean', 'median', 'mode', 'value']\n",
+    "    if fill_missing_method not in valid_methods:\n",
+    "        raise ValueError(f\"Invalid fill_missing_method: {fill_missing_method}. Valid methods are {valid_methods}.\")\n",
+    "    \n",
+    "    for column in df.select_dtypes(include=['number']).columns:  # Only for numeric columns\n",
+    "        if fill_missing_method == 'mean':\n",
+    "            df[column].fillna(df[column].mean(), inplace=True)\n",
+    "        elif fill_missing_method == 'median':\n",
+    "            df[column].fillna(df[column].median(), inplace=True)\n",
+    "        elif fill_missing_method == 'mode':\n",
+    "            mode_value = df[column].mode()\n",
+    "            if len(mode_value) > 1:\n",
+    "                print(f\"Warning: Ambiguous mode for '{column}', using the first value.\")\n",
+    "                mode_value = mode_value[0]\n",
+    "            df[column].fillna(mode_value, inplace=True)\n",
+    "        elif fill_missing_method == 'value' and fill_value is not None:\n",
+    "            df[column].fillna(fill_value, inplace=True)\n",
+    "\n",
+    "    # 3. Handle missing values for non-numeric columns\n",
+    "    for column in df.select_dtypes(exclude=['number']).columns:  # Only for non-numeric columns\n",
+    "        mode_value = df[column].mode()\n",
+    "        if len(mode_value) > 1:\n",
+    "            print(f\"Warning: Ambiguous mode for '{column}', using the first value.\")\n",
+    "            mode_value = mode_value[0]\n",
+    "        df[column].fillna(mode_value, inplace=True)\n",
+    "\n",
+    "    # 4. Remove duplicates\n",
+    "    df.drop_duplicates(inplace=True)\n",
+    "\n",
+    "    # 5. Outlier detection using IQR (Interquartile Range)\n",
+    "    for column in df.select_dtypes(include=['number']).columns:\n",
+    "        Q1 = df[column].quantile(0.25)\n",
+    "        Q3 = df[column].quantile(0.75)\n",
+    "        IQR = Q3 - Q1\n",
+    "        lower_bound = Q1 - 1.5 * IQR\n",
+    "        upper_bound = Q3 + 1.5 * IQR\n",
+    "        df[column] = df[column].clip(lower_bound, upper_bound)  # Clip outliers to the IQR bounds\n",
+    "\n",
+    "    # 6. Data type conversion (e.g., Age column to integer after rounding)\n",
+    "    if 'age' in df.columns:\n",
+    "        mean_age = round(df['age'].mean())  # Round the mean to avoid casting issues\n",
+    "        df['age'].fillna(mean_age, inplace=True)\n",
+    "        df['age'] = df['age'].astype(int)  # Now safely convert to int\n",
+    "\n",
+    "    # 7. Normalize 'Salary' column using Min-Max Scaling\n",
+    "    if 'salary' in df.columns:\n",
+    "        min_salary = df['salary'].min()\n",
+    "        max_salary = df['salary'].max()\n",
+    "        if max_salary == min_salary:\n",
+    "            raise ValueError(\"Min and Max values for 'Salary' are the same. Cannot normalize data.\")\n",
+    "        df['normalized_salary'] = (df['salary'] - min_salary) / (max_salary - min_salary)\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "# Sample DataFrame for testing\n",
+    "data = {'ID': [1, 2, 3, 4, 5, 5],\n",
+    "        'Name': ['Alice', 'Bob', 'Charlie', 'David', 'Eve', 'Eve'],\n",
+    "        'Gender': ['F', 'M', 'M', 'M', 'F', None],\n",
+    "        'Age': [25, 30, None, 35, None, 28],\n",
+    "        'Salary': [50000, 55000, 60000, None, 50000, 55000]}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Apply the clean_data function\n",
+    "df_cleaned = clean_data(df, fill_missing_method='mean')\n",
+    "\n",
+    "# Output the cleaned DataFrame\n",
+    "print(df_cleaned)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
