Refactored data cleaning code and handled missing values more efficiently

--- a/src/Module 4/Hands-on - Data Cleaning & Quality Automation/Ques_1.ipynb
+++ b/src/Module 4/Hands-on - Data Cleaning & Quality Automation/Ques_1.ipynb
@@ -160,6 +160,163 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   id     name gender  age   salary  normalized_salary\n",
+      "0   1    Alice      F   26  50000.0                0.0\n",
+      "1   2      Bob      M   30  55000.0                0.5\n",
+      "2   3  Charlie      M   29  60000.0                1.0\n",
+      "3   4    David      M   32  54000.0                0.4\n",
+      "4   5      Eve      F   29  50000.0                0.0\n",
+      "5   6      Eve   None   28  55000.0                0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import necessary libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Sample DataFrame for testing\n",
+    "data = {\n",
+    "    'ID': [1, 2, 3, 4, 5, 6],\n",
+    "    'Name': ['Alice', 'Bob', 'Charlie', 'David', 'Eve', 'Eve'],\n",
+    "    'Gender': ['F', 'M', 'M', 'M', 'F', None],\n",
+    "    'Age': [25, 30, None, 35, None, 28],\n",
+    "    'Salary': [50000, 55000, 60000, None, 50000, 55000]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Function to standardize column names\n",
+    "def standardize_columns(df):\n",
+    "    df.columns = df.columns.str.lower().str.replace(' ', '_')\n",
+    "    return df\n",
+    "\n",
+    "# Function to handle missing values based on a condition\n",
+    "def fill_missing_by_condition(df, column, condition_column, method='mean'):\n",
+    "    \"\"\"\n",
+    "    Fill missing values in a specific column based on the condition from another column.\n",
+    "    Parameters:\n",
+    "        df (pd.DataFrame): The DataFrame to process\n",
+    "        column (str): The column to fill missing values for\n",
+    "        condition_column (str): The column to base the condition on (e.g., 'Gender')\n",
+    "        method (str): The method to fill missing values ('mean', 'median', 'mode')\n",
+    "    \"\"\"\n",
+    "    if method not in ['mean', 'median', 'mode']:\n",
+    "        raise ValueError(f\"Invalid method '{method}'. Valid methods are 'mean', 'median', 'mode'.\")\n",
+    "    \n",
+    "    # Fill missing values by the condition column's groups\n",
+    "    if method == 'mean':\n",
+    "        df[column] = df.groupby(condition_column)[column].transform(lambda x: x.fillna(x.mean()))\n",
+    "    elif method == 'median':\n",
+    "        df[column] = df.groupby(condition_column)[column].transform(lambda x: x.fillna(x.median()))\n",
+    "    elif method == 'mode':\n",
+    "        df[column] = df.groupby(condition_column)[column].transform(lambda x: x.fillna(x.mode()[0] if not x.mode().empty else np.nan))\n",
+    "    \n",
+    "    return df\n",
+    "\n",
+    "# Function to remove outliers using IQR (Interquartile Range)\n",
+    "def remove_outliers_iqr(df, column):\n",
+    "    \"\"\"\n",
+    "    Remove outliers from the specified column using the IQR method.\n",
+    "    \"\"\"\n",
+    "    Q1 = df[column].quantile(0.25)\n",
+    "    Q3 = df[column].quantile(0.75)\n",
+    "    IQR = Q3 - Q1\n",
+    "    lower_bound = Q1 - 1.5 * IQR\n",
+    "    upper_bound = Q3 + 1.5 * IQR\n",
+    "    \n",
+    "    df[column] = df[column].clip(lower=lower_bound, upper=upper_bound)\n",
+    "    return df\n",
+    "\n",
+    "# Function to convert 'Age' column to integer after rounding\n",
+    "def convert_age_to_integer(df):\n",
+    "    \"\"\"\n",
+    "    Convert 'Age' column to integers after filling missing values and rounding.\n",
+    "    \"\"\"\n",
+    "    mean_age = round(df['age'].mean())\n",
+    "    df['age'].fillna(mean_age, inplace=True)\n",
+    "    df['age'] = df['age'].astype(int)\n",
+    "    return df\n",
+    "\n",
+    "# Function to normalize 'Salary' column using Min-Max scaling\n",
+    "def normalize_salary(df):\n",
+    "    \"\"\"\n",
+    "    Normalize 'Salary' column using Min-Max scaling.\n",
+    "    \"\"\"\n",
+    "    min_salary = df['salary'].min()\n",
+    "    max_salary = df['salary'].max()\n",
+    "    \n",
+    "    if max_salary == min_salary:\n",
+    "        raise ValueError(\"Min and Max values for 'Salary' are the same. Cannot normalize data.\")\n",
+    "    \n",
+    "    df['normalized_salary'] = (df['salary'] - min_salary) / (max_salary - min_salary)\n",
+    "    return df\n",
+    "\n",
+    "# Function to clean data - Handles missing values, duplicates, outliers, type conversion, and normalization\n",
+    "def clean_data(df, fill_missing_method='mean', fill_value=None):\n",
+    "    \"\"\"\n",
+    "    Automate the data cleaning process.\n",
+    "    1. Fill missing values.\n",
+    "    2. Remove duplicates.\n",
+    "    3. Remove outliers using IQR.\n",
+    "    4. Convert columns to appropriate data types.\n",
+    "    5. Normalize numeric columns.\n",
+    "    \"\"\"\n",
+    "    # Standardize column names\n",
+    "    df = standardize_columns(df)\n",
+    "    \n",
+    "    # Fill missing values based on the specified method\n",
+    "    valid_methods = ['mean', 'median', 'mode', 'value']\n",
+    "    if fill_missing_method not in valid_methods:\n",
+    "        raise ValueError(f\"Invalid fill_missing_method: {fill_missing_method}. Valid methods are {valid_methods}.\")\n",
+    "    \n",
+    "    for column in df.select_dtypes(include=['number']).columns:\n",
+    "        if fill_missing_method == 'mean':\n",
+    "            df[column].fillna(df[column].mean(), inplace=True)\n",
+    "        elif fill_missing_method == 'median':\n",
+    "            df[column].fillna(df[column].median(), inplace=True)\n",
+    "        elif fill_missing_method == 'mode':\n",
+    "            mode_value = df[column].mode()\n",
+    "            if len(mode_value) > 1:\n",
+    "                print(f\"Warning: Ambiguous mode for '{column}', using the first value.\")\n",
+    "                mode_value = mode_value[0]\n",
+    "            df[column].fillna(mode_value, inplace=True)\n",
+    "        elif fill_missing_method == 'value' and fill_value is not None:\n",
+    "            df[column].fillna(fill_value, inplace=True)\n",
+    "    \n",
+    "    # Remove duplicates\n",
+    "    df.drop_duplicates(inplace=True)\n",
+    "    \n",
+    "    # Remove outliers using IQR for numeric columns\n",
+    "    for column in df.select_dtypes(include=['number']).columns:\n",
+    "        df = remove_outliers_iqr(df, column)\n",
+    "    \n",
+    "    # Convert 'Age' column to integers after rounding\n",
+    "    if 'age' in df.columns:\n",
+    "        df = convert_age_to_integer(df)\n",
+    "    \n",
+    "    # Normalize 'Salary' column using Min-Max scaling\n",
+    "    if 'salary' in df.columns:\n",
+    "        df = normalize_salary(df)\n",
+    "    \n",
+    "    return df\n",
+    "\n",
+    "# Clean the sample data using the clean_data function\n",
+    "df_cleaned = clean_data(df, fill_missing_method='mean')\n",
+    "\n",
+    "# Display cleaned data\n",
+    "print(df_cleaned)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
