--- a/src/Module 4/Hands-on - Data Cleaning & Quality Automation/Ques_2.ipynb
+++ b/src/Module 4/Hands-on - Data Cleaning & Quality Automation/Ques_2.ipynb
@@ -2,9 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing Values in the DataFrame:\n",
+      "ID        0\n",
+      "Name      1\n",
+      "Age       1\n",
+      "Gender    1\n",
+      "Salary    2\n",
+      "dtype: int64\n",
+      "\n",
+      "Data after handling missing values:\n",
+      "   ID     Name        Age Gender   Salary\n",
+      "0   1    Alice  25.000000      F  50000.0\n",
+      "1   2      Bob  30.000000      M  55000.0\n",
+      "2   3  Charlie  30.833333      M  60000.0\n",
+      "3   4    David  35.000000      M  70000.0\n",
+      "4   5      Eve  40.000000      F  55000.0\n",
+      "5   6    Alice  25.000000      F  50000.0\n",
+      "6   7     None  30.000000      F  55000.0\n",
+      "\n",
+      "Duplicate Entries in the DataFrame:\n",
+      "0\n",
+      "\n",
+      "Data after removing duplicates:\n",
+      "   ID     Name        Age Gender   Salary\n",
+      "0   1    Alice  25.000000      F  50000.0\n",
+      "1   2      Bob  30.000000      M  55000.0\n",
+      "2   3  Charlie  30.833333      M  60000.0\n",
+      "3   4    David  35.000000      M  70000.0\n",
+      "4   5      Eve  40.000000      F  55000.0\n",
+      "5   6    Alice  25.000000      F  50000.0\n",
+      "6   7     None  30.000000      F  55000.0\n",
+      "\n",
+      "New Data after handling missing values and duplicates:\n",
+      "   ID   Name    Age Gender   Salary\n",
+      "0   8  Grace  29.00      F  65000.0\n",
+      "1   9  Helen  29.25      F  70000.0\n",
+      "2  10  Alice  30.00      F  65000.0\n",
+      "3  11   Ivan  25.00      M  55000.0\n",
+      "4  12   John  33.00      M  75000.0\n",
+      "5  13  Alice  29.25      M  60000.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Part 1: Handle Missing Values & Duplicates\n",
     "\n",
@@ -24,7 +70,75 @@
     "        \n",
     "        \n",
     "        \n",
-    "        \n",
+    "        # Step 1: Import the necessary library\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Step 2: Load the Data\n",
+    "# For this example, we will create a sample dataset\n",
+    "\n",
+    "data = {\n",
+    "    'ID': [1, 2, 3, 4, 5, 6, 7],\n",
+    "    'Name': ['Alice', 'Bob', 'Charlie', 'David', 'Eve', 'Alice', None],\n",
+    "    'Age': [25, 30, None, 35, 40, 25, 30],\n",
+    "    'Gender': ['F', 'M', 'M', 'M', 'F', 'F', None],\n",
+    "    'Salary': [50000, None, 60000, 70000, None, 50000, 55000]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Step 3: Handling Missing Values\n",
+    "# 3.1 Identify Missing Values\n",
+    "print(\"Missing Values in the DataFrame:\")\n",
+    "print(df.isnull().sum())\n",
+    "\n",
+    "# 3.2 Fill Missing Values\n",
+    "# Filling missing values in 'Age' with the mean of the column\n",
+    "df['Age'].fillna(df['Age'].mean(), inplace=True)\n",
+    "\n",
+    "# Filling missing values in 'Gender' with the mode (most frequent value)\n",
+    "df['Gender'].fillna(df['Gender'].mode()[0], inplace=True)\n",
+    "\n",
+    "# Filling missing values in 'Salary' with the median of the column\n",
+    "df['Salary'].fillna(df['Salary'].median(), inplace=True)\n",
+    "\n",
+    "print(\"\\nData after handling missing values:\")\n",
+    "print(df)\n",
+    "\n",
+    "# Step 4: Handling Duplicates\n",
+    "# 4.1 Identify Duplicates\n",
+    "print(\"\\nDuplicate Entries in the DataFrame:\")\n",
+    "print(df.duplicated().sum())\n",
+    "\n",
+    "# 4.2 Remove Duplicates\n",
+    "# Remove duplicate rows based on all columns\n",
+    "df.drop_duplicates(inplace=True)\n",
+    "\n",
+    "print(\"\\nData after removing duplicates:\")\n",
+    "print(df)\n",
+    "\n",
+    "# Step 5: Combined Practice on a New Dataset\n",
+    "# 5.1 New Sample Data\n",
+    "data_new = {\n",
+    "    'ID': [8, 9, 10, 11, 12, 13],\n",
+    "    'Name': ['Grace', 'Helen', 'Alice', 'Ivan', 'John', 'Alice'],\n",
+    "    'Age': [29, None, 30, 25, 33, None],\n",
+    "    'Gender': ['F', 'F', 'F', 'M', 'M', 'M'],\n",
+    "    'Salary': [65000, 70000, None, 55000, 75000, 60000]\n",
+    "}\n",
+    "\n",
+    "df_new = pd.DataFrame(data_new)\n",
+    "\n",
+    "# 5.2 Handling Missing Values\n",
+    "df_new['Age'].fillna(df_new['Age'].mean(), inplace=True)\n",
+    "df_new['Salary'].fillna(df_new['Salary'].median(), inplace=True)\n",
+    "\n",
+    "# 5.3 Remove Duplicates\n",
+    "df_new.drop_duplicates(inplace=True)\n",
+    "\n",
+    "print(\"\\nNew Data after handling missing values and duplicates:\")\n",
+    "print(df_new)\n",
+    "\n",
     "        \n",
     "        \n",
     "        \n",
@@ -33,9 +147,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing Values in the DataFrame:\n",
+      "ID        0\n",
+      "Name      1\n",
+      "Age       1\n",
+      "Gender    1\n",
+      "Salary    2\n",
+      "dtype: int64\n",
+      "\n",
+      "Data after handling missing values:\n",
+      "   ID     Name        Age Gender   Salary\n",
+      "0   1    Alice  25.000000      F  50000.0\n",
+      "1   2      Bob  30.000000      M  55000.0\n",
+      "2   3  Charlie  30.833333      M  60000.0\n",
+      "3   4    David  35.000000      M  70000.0\n",
+      "4   5      Eve  40.000000      F  55000.0\n",
+      "5   6    Alice  25.000000      F  50000.0\n",
+      "6   7     None  30.000000      F  55000.0\n",
+      "\n",
+      "Duplicate Entries in the DataFrame:\n",
+      "0\n",
+      "\n",
+      "Data after removing duplicates:\n",
+      "   ID     Name        Age Gender   Salary\n",
+      "0   1    Alice  25.000000      F  50000.0\n",
+      "1   2      Bob  30.000000      M  55000.0\n",
+      "2   3  Charlie  30.833333      M  60000.0\n",
+      "3   4    David  35.000000      M  70000.0\n",
+      "4   5      Eve  40.000000      F  55000.0\n",
+      "5   6    Alice  25.000000      F  50000.0\n",
+      "6   7     None  30.000000      F  55000.0\n",
+      "\n",
+      "New Data after handling missing values and duplicates:\n",
+      "   ID   Name    Age Gender   Salary\n",
+      "0   8  Grace  29.00      F  65000.0\n",
+      "1   9  Helen  29.25      F  70000.0\n",
+      "2  10  Alice  30.00      F  65000.0\n",
+      "3  11   Ivan  25.00      M  55000.0\n",
+      "4  12   John  33.00      M  75000.0\n",
+      "5  13  Alice  29.25      M  60000.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Part 2: Apply Standardization & Formatting Rules\n",
     "\n",
@@ -48,7 +208,75 @@
     "#     1. New Sample Data:\n",
     "#     2. Standardize Product Names:\n",
     "#     3. Format Prices to Two Decimal Places:\n",
-    "        \n",
+    "        # Step 1: Import the necessary library\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Step 2: Load the Data\n",
+    "# For this example, we will create a sample dataset\n",
+    "\n",
+    "data = {\n",
+    "    'ID': [1, 2, 3, 4, 5, 6, 7],\n",
+    "    'Name': ['Alice', 'Bob', 'Charlie', 'David', 'Eve', 'Alice', None],\n",
+    "    'Age': [25, 30, None, 35, 40, 25, 30],\n",
+    "    'Gender': ['F', 'M', 'M', 'M', 'F', 'F', None],\n",
+    "    'Salary': [50000, None, 60000, 70000, None, 50000, 55000]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Step 3: Handling Missing Values\n",
+    "# 3.1 Identify Missing Values\n",
+    "print(\"Missing Values in the DataFrame:\")\n",
+    "print(df.isnull().sum())\n",
+    "\n",
+    "# 3.2 Fill Missing Values\n",
+    "# Filling missing values in 'Age' with the mean of the column\n",
+    "df['Age'].fillna(df['Age'].mean(), inplace=True)\n",
+    "\n",
+    "# Filling missing values in 'Gender' with the mode (most frequent value)\n",
+    "df['Gender'].fillna(df['Gender'].mode()[0], inplace=True)\n",
+    "\n",
+    "# Filling missing values in 'Salary' with the median of the column\n",
+    "df['Salary'].fillna(df['Salary'].median(), inplace=True)\n",
+    "\n",
+    "print(\"\\nData after handling missing values:\")\n",
+    "print(df)\n",
+    "\n",
+    "# Step 4: Handling Duplicates\n",
+    "# 4.1 Identify Duplicates\n",
+    "print(\"\\nDuplicate Entries in the DataFrame:\")\n",
+    "print(df.duplicated().sum())\n",
+    "\n",
+    "# 4.2 Remove Duplicates\n",
+    "# Remove duplicate rows based on all columns\n",
+    "df.drop_duplicates(inplace=True)\n",
+    "\n",
+    "print(\"\\nData after removing duplicates:\")\n",
+    "print(df)\n",
+    "\n",
+    "# Step 5: Combined Practice on a New Dataset\n",
+    "# 5.1 New Sample Data\n",
+    "data_new = {\n",
+    "    'ID': [8, 9, 10, 11, 12, 13],\n",
+    "    'Name': ['Grace', 'Helen', 'Alice', 'Ivan', 'John', 'Alice'],\n",
+    "    'Age': [29, None, 30, 25, 33, None],\n",
+    "    'Gender': ['F', 'F', 'F', 'M', 'M', 'M'],\n",
+    "    'Salary': [65000, 70000, None, 55000, 75000, 60000]\n",
+    "}\n",
+    "\n",
+    "df_new = pd.DataFrame(data_new)\n",
+    "\n",
+    "# 5.2 Handling Missing Values\n",
+    "df_new['Age'].fillna(df_new['Age'].mean(), inplace=True)\n",
+    "df_new['Salary'].fillna(df_new['Salary'].median(), inplace=True)\n",
+    "\n",
+    "# 5.3 Remove Duplicates\n",
+    "df_new.drop_duplicates(inplace=True)\n",
+    "\n",
+    "print(\"\\nNew Data after handling missing values and duplicates:\")\n",
+    "print(df_new)\n",
+    "\n",
     "        \n",
     "        \n",
     "        \n",
@@ -57,8 +285,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
