Detecting Data Drift and Automating Data Quality Checks

--- a/src/Module 4/Advanced Data Quality & Validation/Ques_2.ipynb
+++ b/src/Module 4/Advanced Data Quality & Validation/Ques_2.ipynb
@@ -130,6 +130,58 @@
     "# Visualize Drift\n",
     "visualize_drift(train_df, current_df)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optimized version of data quality checks with better error handling and vectorization\n",
+    "def data_quality_checks_optimized(df):\n",
+    "    quality_issues = {}\n",
+    "    \n",
+    "    # Check for missing values - vectorized operation\n",
+    "    missing_values = df.isnull().sum()\n",
+    "    if missing_values.any():\n",
+    "        quality_issues['Missing Values'] = missing_values[missing_values > 0]\n",
+    "    \n",
+    "    # Check for duplicate rows - efficient without looping\n",
+    "    duplicates = df.duplicated().sum()\n",
+    "    if duplicates > 0:\n",
+    "        quality_issues['Duplicates'] = duplicates\n",
+    "    \n",
+    "    # Outlier detection using vectorized z-score calculation\n",
+    "    z_scores = np.abs((df.select_dtypes(include=[np.number]) - df.mean()) / df.std())\n",
+    "    outliers = (z_scores > 3).sum()  # count the number of outliers\n",
+    "    if outliers.any():\n",
+    "        quality_issues['Outliers'] = outliers.sum()\n",
+    "    \n",
+    "    # Return collected quality issues\n",
+    "    return quality_issues\n",
+    "\n",
+    "# Error handling when performing KS-test for drift detection\n",
+    "def safe_ks_test(train_series, current_series):\n",
+    "    try:\n",
+    "        statistic, p_value = ks_2samp(train_series, current_series)\n",
+    "        return statistic, p_value\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error in KS-test for columns: {e}\")\n",
+    "        return None, None\n",
+    "\n",
+    "# Example of applying the error-safe KS-test for drift detection\n",
+    "def detect_data_drift_with_error_handling(train_df, current_df):\n",
+    "    drift_results = {}\n",
+    "    for column in train_df.columns:\n",
+    "        if column in current_df.columns:\n",
+    "            statistic, p_value = safe_ks_test(train_df[column], current_df[column])\n",
+    "            if p_value is not None:\n",
+    "                drift_results[column] = \"Drift Detected\" if p_value < 0.05 else \"No Drift\"\n",
+    "        else:\n",
+    "            drift_results[column] = \"Column missing in current data\"\n",
+    "    \n",
+    "    return drift_results\n"
+   ]
   }
  ],
  "metadata": {
